--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.4.3",
     "vite": "^3.2.0"
   },
